--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <canvas id="chart" width="600" height="400"></canvas>
+        <canvas id="chart"></canvas>
     </body>
     
 </html>
