multichart + horizontal margin

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <canvas id="chart"></canvas>
+        <div class="chart-container">
+            <canvas id="chart"></canvas>
+            <canvas id="chart2"></canvas>
+        </div>
     </body>
     
 </html>
