fixed subcolumn intervals

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="chart-container">
             <canvas id="chart"></canvas>
-            <!-- <canvas id="chart2"></canvas> -->
+            <canvas id="chart2"></canvas>
         </div>
     </body>
     
